--- a/main.css
+++ b/main.css
@@ -307,3 +307,11 @@ a {
     display: inline-block;
     transition: background-color 0.6s ease;
 }
+
+.bh:hover {
+    background-color: #9aa3e7;
+}
+
+.bh {
+    background-color: #aca8a8;
+}
